Adiciona páginas de tarefas e aulas

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -40,10 +40,10 @@
         <nav>
           <ul>
             <li>
-              <a href="aulas" class="nav">Aulas</a>
+              <a href="aulas.html" class="nav">Aulas</a>
             </li>
             <li>
-              <a href="tarefas" class="nav">Tarefas</a>
+              <a href="tarefas.html" class="nav">Tarefas</a>
             </li>
           </ul>
         </nav>
