--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -6,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}"/>
   </head>
   <body>
     <div id="container" class="sidebar">
