Modifica URL base

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
-    <link rel="stylesheet" href="/assets/css/styles.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css"/>
   </head>
   <body>
     <div id="container" class="sidebar">
@@ -42,10 +42,10 @@
         <nav>
           <ul>
             <li>
-              <a href="aulas.html" class="nav">Aulas</a>
+              <a href="{{ site.baseurl }}/aulas.html" class="nav">Aulas</a>
             </li>
             <li>
-              <a href="tarefas.html" class="nav">Tarefas</a>
+              <a href="{{ site.baseurl }}/tarefas.html" class="nav">Tarefas</a>
             </li>
           </ul>
         </nav>
