--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
           </ul>
         </nav>
         <section class="contents">
-          <a href="" class="nav">
+          <a href="{{ site.baseurl }}" class="nav">
             <h1>Programação Web Interativa</h1>
           </a>
         </section>
@@ -42,10 +42,10 @@
         <nav>
           <ul>
             <li>
-              <a href="{{ site.baseurl }}/aulas.html" class="nav">Aulas</a>
+              <a href="{{ site.baseurl }}/aulas" class="nav">Aulas</a>
             </li>
             <li>
-              <a href="{{ site.baseurl }}/tarefas.html" class="nav">Tarefas</a>
+              <a href="{{ site.baseurl }}/tarefas" class="nav">Tarefas</a>
             </li>
           </ul>
         </nav>
