--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,8 @@
         </nav>
         <section class="contents">
           <a href="{{ site.baseurl }}" class="nav">
-            <h1>Programação Web Interativa</h1>
+            <h1>PWI</h1>
+            Programação Web Interativa
           </a>
         </section>
         <nav>
