--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -294,13 +294,12 @@ div.week:nth-of-type(2n) {
   background-color: white;
 }
 
-#container.full #markdown-toc {
+#markdown-toc {
   margin: 1.5em;
 }
 
 section.part {
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding: 1.5em;
 }
 
 section.part h2 {
