--- a/_layouts/homework.html
+++ b/_layouts/homework.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <header>
   <h2>
-    Homework {{ page.number }}
+    Tarefa {{ page.number }}
   </h2>
   <h1>{{ page.title }}</h1>
 </header>
