--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>Programação Web Interativa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/icon32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/icon16.png" sizes="16x16" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css"/>
@@ -53,6 +56,9 @@
         <section>
           {{ content }}
         </section>
+        <div class="icon">
+          Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        </div>
       </section>
     </div>
   </body>
