Adiciona código do google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css"/>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMQC5K3FRS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-ZMQC5K3FRS');
+    </script>
   </head>
   <body>
     <div id="container" class="sidebar">
