Adiciona metadados e imagem ilustrativa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8">
-    <title>Programação Web Interativa</title>
+    <title>Interactive Web Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/icon32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/icon16.png" sizes="16x16" />
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata:400,700|Space+Mono:400,700|Open+Sans:400,700">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css"/>
 
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Interactive Web Programming | Murilo Camargos" />
+    <meta property="og:description" content="Welcome to IWP: Interactive Web Programming! In this class, you will learn modern full-stack web development techniques without use of a frontend framework." />
+    <meta property="og:url" content="{{ site.baseurl }}" />
+    <meta property="og:site_name" content="Murilo Camargos" />
+    <meta property="og:image" content="{{ site.baseurl }}/assets/images/site.png" />
+    <meta property="og:image:width" content="6000" />
+    <meta property="og:image:height" content="4000" />
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMQC5K3FRS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
